# rust-terminal-keyboard

./: .gitignore  BUILD.md  Cargo.toml  README.md  STATUS.md
src/: app.rs  audio.rs  config.rs  effects.rs  file_dialog.rs  main.rs  midi.rs  piano.rs  ui.rs
