[package]
name = "terminal-piano"
version = "0.1.0"
edition = "2021"
authors = ["Terminal Piano Contributors"]
description = "A beautiful terminal piano with MIDI support and visual effects"
license = "MIT"

[[bin]]
name = "terminal-piano"
path = "src/main.rs"

[dependencies]
# Terminal UI and Effects
ratatui = "0.28"
crossterm = "0.28"

# Audio
rodio = "0.19"
hound = "3.5"

# MIDI
midly = "0.5"

# Utility
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }

# Async
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

# Additional dependencies for effects
rand = "0.8"

[dev-dependencies]
criterion = "0.5"